<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:background="@color/bottom_nav_color"
                                                   tools:context=".ui.add_record.AddWalletFragment">
 <androidx.constraintlayout.widget.ConstraintLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="20dp"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
         app:layout_constraintTop_toTopOf="parent"
         android:background="@color/bottom_nav_color"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">

     <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/home_header"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:layout_marginTop="20dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                app:layout_constraintTop_toTopOf="parent"
                android:background="@color/bottom_nav_color"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

            <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    app:cardCornerRadius="16dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:cardElevation="4dp">
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/white"
                        android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white">
                        <LinearLayout
                                android:orientation="horizontal"
                                android:layout_width="match_parent"
                                android:layout_height="60dp"
                                android:layout_margin="5dp"
                                tools:layout_editor_absoluteY="1dp"
                                tools:layout_editor_absoluteX="1dp">
                            <ImageView
                                    android:src="@drawable/baseline_attach_money_24"
                                    android:layout_width="wrap_content"
                                    android:layout_height="match_parent"
                                    android:layout_margin="10dp"/>
                            <LinearLayout
                                    android:orientation="vertical"
                                    android:layout_width="wrap_content"
                                    android:layout_height="match_parent">
                                <TextView
                                        android:text="@string/amount_title"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:textSize="12sp"/>
                                <EditText
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:inputType="numberDecimal|number"
                                        android:hint="@string/amount_placeholder"
                                        android:ems="10"
                                        android:id="@+id/editTextAmount"
                                        android:autofillHints=""/>
                            </LinearLayout>
                        </LinearLayout>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white">
                        <LinearLayout
                                android:orientation="horizontal"
                                android:layout_width="match_parent"
                                android:layout_height="60dp"
                                android:layout_margin="5dp"
                                tools:layout_editor_absoluteY="1dp"
                                tools:layout_editor_absoluteX="1dp">
                            <ImageView
                                    android:src="@drawable/baseline_style_24"
                                    android:layout_width="wrap_content"
                                    android:layout_height="match_parent"
                                    android:layout_margin="10dp"/>
                            <LinearLayout
                                    android:layout_width="wrap_content"
                                    android:layout_height="match_parent" android:orientation="vertical">
                                <TextView
                                        android:text="Category"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:textSize="12sp"/>
                                <EditText
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:inputType="text"
                                        android:hint="@string/dot"
                                        android:ems="10"
                                        android:id="@+id/editTextCategory"
                                        android:autofillHints=""/>
                            </LinearLayout>
                        </LinearLayout>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white">
                        <LinearLayout
                                android:orientation="horizontal"
                                android:layout_width="match_parent"
                                android:layout_height="60dp"
                                android:layout_margin="5dp"
                                tools:layout_editor_absoluteY="1dp"
                                tools:layout_editor_absoluteX="1dp">
                            <ImageView
                                    android:src="@drawable/baseline_calendar_month_24"
                                    android:layout_width="wrap_content"
                                    android:layout_height="match_parent"
                                    android:layout_margin="10dp"/>
                            <LinearLayout
                                    android:orientation="vertical"
                                    android:layout_width="wrap_content"
                                    android:layout_height="match_parent">
                                <TextView
                                        android:text="Date time"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:textSize="12sp"/>
                                <EditText
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:inputType="datetime"
                                        android:hint="@string/dot"
                                        android:ems="10"
                                        android:id="@+id/editTextTextCal"
                                        android:autofillHints=""/>
                            </LinearLayout>
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
        <Button
                android:text="Save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/add_wallet_button"
                android:layout_marginBottom="@dimen/button_margin_bottom"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>
